--- a/ly-item/ly-item-service/pom.xml
+++ b/ly-item/ly-item-service/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>ly-item-interface</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.leyou.common</groupId>
+            <artifactId>ly-commom</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
