--- a/ly-item/ly-item-service/src/main/resources/application.yml
+++ b/ly-item/ly-item-service/src/main/resources/application.yml
@@ -13,3 +13,6 @@ eureka:
     service-url:
      defaultZone: http://127.0.0.1:10086/eureka
 
+mybatis:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
