品牌管理商品表规格参数的具体实现

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>ly-gateway</module>
         <module>ly-item</module>
         <module>ly-commom</module>
+        <module>ly-upload</module>
     </modules>
     <packaging>pom</packaging>
     <parent>
